2007-01-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Makefile.am: Remove Layer.h from the distribution.

2006-12-05  Al Riddoch  <alriddoch@zepler.org>

	* tests/unit/Makefile.am: Add new directory for true unit tests.

	* tests/unit/AtlasDebugtest.cpp: Add initial proof of concept unit
	  test for the debug header.

2006-10-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateObjectFactory.py: Tweak the copyright name.

	* Atlas/Objects/flag.cpp, Atlas/Objects/objectFactory.cpp:
	  Re-generate generated source.

2006-08-14  Al Riddoch  <alriddoch@zepler.org>

	* atlas-cpp.spec.in: Remove BuildRequires, as all that is required
	  is a C++ compiler.

2006-05-16  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Net/Stream.cpp: Fix strange logic in codec negotiation
	  that ran the state machine for every byte.

2006-04-19  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.6.0, Interface version 1.

2006-03-05  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version to 0.6.0.

	* Atlas/Objects/AttributeInfo.py, Atlas/Objects/GenerateDecoder.py,
	  Atlas/Objects/GenerateDispatcher.py,
	  Atlas/Objects/GenerateObjectFactory.py, Atlas/Objects/common.py,
	  Atlas/Objects/gen_cpp.py: Update copyright dates in scripts, and
	  in the generated code.

	* Atlas/Objects/Anonymous.cpp, Atlas/Objects/Anonymous.h,
	  Atlas/Objects/Decoder.cpp, Atlas/Objects/Decoder.h,
	  Atlas/Objects/Dispatcher.cpp, Atlas/Objects/Dispatcher.h,
	  Atlas/Objects/Entity.h, Atlas/Objects/Generic.cpp,
	  Atlas/Objects/Generic.h, Atlas/Objects/ObjectsFwd.h,
	  Atlas/Objects/Operation.h, Atlas/Objects/Root.cpp,
	  Atlas/Objects/Root.h, Atlas/Objects/RootEntity.cpp,
	  Atlas/Objects/RootEntity.h, Atlas/Objects/RootEntityChildren.cpp,
	  Atlas/Objects/RootOperation.cpp, Atlas/Objects/RootOperation.h,
	  Atlas/Objects/RootOperationChildren1.cpp,
	  Atlas/Objects/RootOperationChildren2.cpp,
	  Atlas/Objects/RootOperationChildren3.cpp,